syntax = "proto3";

package org.example;

import "dev/restate/ext.proto";

service JepsenService {

	option (dev.restate.ext.service_type) = KEYED;

	rpc Read(ReadRequest) returns (ReadResponse) {};

	rpc Write(WriteRequest) returns (WriteResponse) {};

	rpc Cas(CasRequest) returns (CasResponse) {};
}

message ReadRequest {
	int32 key = 1 [(dev.restate.ext.field) = KEY];
}

message ReadResponse {
	int32 value = 1;
}


message WriteRequest {
	int32 key = 1 [(dev.restate.ext.field) = KEY];
	int32 value = 2;
}


message WriteResponse {
}

message CasRequest {
	int32 key = 1 [(dev.restate.ext.field) = KEY];
	int32 compare = 2;
	int32 exchange = 3;
}

message CasResponse {
	bool success = 1;
}
